:sparkles: feat: update SubjectMapper and SubjectService for static methods and null checks