@@ -5,52 +5,48 @@ import com.fatec.horario.dtos.SubjectResponse;
 import com.fatec.horario.entities.Subject;
 import com.fatec.horario.mappers.SubjectMapper;
 import com.fatec.horario.repositories.SubjectRepository;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SubjectService {
 
-    private final SubjectRepository subjectRepository;
-    private final SubjectMapper subjectMapper;
-
-    public SubjectService(SubjectRepository subjectRepository, SubjectMapper subjectMapper) {
-        this.subjectRepository = subjectRepository;
-        this.subjectMapper = subjectMapper;
-    }
+    @Autowired
+    private SubjectRepository subjectRepository;
 
     public List<SubjectResponse> getAll() {
         return subjectRepository.findAll()
                 .stream()
-                .map(subjectMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(SubjectMapper::toResponse)
+                .toList();
     }
 
     public SubjectResponse getById(Long id) {
         Subject subject = subjectRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Subject not found with id: " + id));
 
-        return subjectMapper.toResponse(subject);
+        return SubjectMapper.toResponse(subject);
     }
 
-    public SubjectResponse create(SubjectRequest dto) {
-        Subject subject = subjectMapper.toEntity(dto);
-        Subject saved = subjectRepository.save(subject);
-        return subjectMapper.toResponse(saved);
+    public SubjectResponse create(SubjectRequest request) {
+        Subject subject = SubjectMapper.toEntity(request);
+        subject = subjectRepository.save(subject);
+        return SubjectMapper.toResponse(subject);
     }
 
-    public SubjectResponse update(Long id, SubjectRequest dto) {
+    public SubjectResponse update(Long id, SubjectRequest request) {
         Subject subject = subjectRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Subject not found with id: " + id));
 
-        subject.setName(dto.name());
-        subject.setAcronym(dto.acronym());
-        subject.setPracticalLessonCount(dto.practicalLessonCount());
+        subject.setName(request.name());
+        subject.setAcronym(request.acronym());
+        subject.setPracticalLessonCount(request.practicalLessonCount());
 
-        Subject updated = subjectRepository.save(subject);
-        return subjectMapper.toResponse(updated);
+        subject = subjectRepository.save(subject);
+        return SubjectMapper.toResponse(subject);
     }
 
     public void delete(Long id) {
